--- a/tools/reset/Makefile
+++ b/tools/reset/Makefile
@@ -40,13 +40,13 @@ ${U3BIN}/u3reset: ${RESET_LIB}/fileutil.o ${RESET_LIB}/u3reset.o \
 # clean
 clean:
 	rm ${U2BIN}/u2reset
+	rm ${U3BIN}/u3reset
 	rm ${RESET_LIB}/*.o
 
 # package
 package: package_u2 package_u3
 
-package_u2: ${U2PKG} ${U2BIN}/u2reset
-	cp -f ${U2BIN}/u2reset ${U2PKG}/u2reset${BINSUFFIX}
+package_u2:
 
 package_u3:
 
