add inicfg logic & structure

--- a/tools/common/Makefile
+++ b/tools/common/Makefile
@@ -1,7 +1,7 @@
 ROOT=../..
 include ${ROOT}/Makefile.include
 
-compile: ${COMMON_LIB}/File.o ${COMMON_LIB}/DirList.o ${COMMON_LIB}/option.o
+compile: ${COMMON_LIB}/File.o ${COMMON_LIB}/DirList.o ${COMMON_LIB}/option.o ${COMMON_LIB}/IniCfg.o
 
 ${COMMON_LIB}:
 	mkdir -p ${COMMON_LIB}
@@ -15,6 +15,9 @@ ${COMMON_LIB}/DirList.o: DirList.c DirList.h File.h gendefs.h | ${COMMON_LIB}
 
 ${COMMON_LIB}/option.o: option.c option.h gendefs.h | ${COMMON_LIB}
 	$(call compile, ${COMMON_LIB}/option.o, option.c)
+
+${COMMON_LIB}/IniCfg.o: IniCfg.c IniCfg.h File.h gendefs.h | ${COMMON_LIB}
+	$(call compile, ${COMMON_LIB}/IniCfg.o, IniCfg.c)
 
 # clean
 clean:
