--- a/tools/Makefile
+++ b/tools/Makefile
@@ -17,19 +17,15 @@ package%: FORCE
 	# package only dos/win/linux targets
 	for i in ${PACKAGE_DIRS}; do \
 		if [ -d "$$i" ]; then \
-			cd $$i; \
 			TARGET=dos make -C $$i $@ || exit 1; \
 			TARGET=winnt make -C $$i $@ || exit 1; \
 			TARGET=linux make -C $$i $@ || exit 1; \
-			cd ..; \
 		fi \
 	done
 
 gen_config%: FORCE
 	# run local target to generate config file
-	cd cfg; \
-	TARGET=local make -C $$i $@ || exit 1; \
-	cd ..
+	TARGET=local make -C cfg $@ || exit 1
 
 Makefile: ;
 FORCE: ;
