add List structure

--- a/tools/common/Makefile
+++ b/tools/common/Makefile
@@ -3,7 +3,7 @@ include ${ROOT}/Makefile.include
 
 compile: ${COMMON_LIB}/File.o ${COMMON_LIB}/DirList.o ${COMMON_LIB}/option.o \
 		${COMMON_LIB}/IniCfg.o ${COMMON_LIB}/stringutil.o ${COMMON_LIB}/filepath.o \
-		${COMMON_LIB}/debug.o
+		${COMMON_LIB}/List.o ${COMMON_LIB}/debug.o
 
 ${COMMON_LIB}:
 	mkdir -p ${COMMON_LIB}
@@ -26,6 +26,9 @@ ${COMMON_LIB}/stringutil.o: stringutil.c stringutil.h | ${COMMON_LIB}
 
 ${COMMON_LIB}/filepath.o: filepath.c filepath.h stringutil.h | ${COMMON_LIB}
 	$(call compile, ${COMMON_LIB}/filepath.o, filepath.c)
+
+${COMMON_LIB}/List.o: List.c List.h gendefs.h | ${COMMON_LIB}
+	$(call compile, ${COMMON_LIB}/List.o, List.c)
 
 ${COMMON_LIB}/debug.o: debug.c debug.h gendefs.h | ${COMMON_LIB}
 	$(call compile, ${COMMON_LIB}/debug.o, debug.c)
