readme/ini updates

--- a/data/u2up.ini
+++ b/data/u2up.ini
@@ -5,6 +5,10 @@ base=u2-map.pat
 ; this is the order in which they should be applied
 releases=u2-uc.pat,u2-map.pat,u2-gog.pat
 
+; floppy releases we don't support
+; Sierra On-Line (1983)
+; Ultima Trilogy I-II-III (1989)
+
 ; names for release patch levels
 none=Ultima I-VI Series (1991)
 u2-uc.pat=Speed Fix / Ultima Collection (1997)
