minor cleanups in patcher code & config

--- a/data/u2up.ini
+++ b/data/u2up.ini
@@ -11,8 +11,8 @@ releases=u2-uc.pat,u2-map.pat,u2-gog.pat
 
 ; names for release patch levels
 none=Ultima I-VI Series (1991)
-u2-uc.pat=Speed Fix / Ultima Collection (1997)
-u2-map.pat=Map Patch (1997)
+u2-uc.pat=Micro Dragon's Speed Fix / Ultima Collection (1997)
+u2-map.pat=Moonstone Dragon's Map Patch (1997)
 u2-gog.pat=GOG.com (2007)
 
 ; names for upgrade patches
