--- a/data/u2up.ini
+++ b/data/u2up.ini
@@ -22,3 +22,7 @@ u2up-20.pat=Ultima 2 Upgrade v2.0
 
 ; readme file to show after upgrade
 readme=README.txt
+
+; config programs to invoke
+config.win=u2cfgw.exe
+config.dos=u2cfg.exe
