update cfg to allow selection of different tilesets

--- a/tools/cfg/Makefile
+++ b/tools/cfg/Makefile
@@ -1,13 +1,20 @@
 ROOT=../..
 include ${ROOT}/Makefile.include
 
+HEADERS=${COMMON}/File.h ${COMMON}/DirList.h ${COMMON}/gendefs.h ${COMMON}/option.h \
+		${COMMON}/IniCfg.h ${COMMON}/filepath.h ${COMMON}/stringutil.h ${COMMON}/debug.h \
+		${COMMON}/List.h cfg.h
+LIBS=${COMMON_LIB}/File.o ${COMMON_LIB}/DirList.o ${COMMON_LIB}/option.o ${COMMON_LIB}/IniCfg.o \
+		${COMMON_LIB}/filepath.o ${COMMON_LIB}/stringutil.o ${COMMON_LIB}/debug.o \
+		${COMMON_LIB}/List.o
+
 compile: ${U2BIN}/u2cfg ${U3BIN}/u3cfg ${U5BIN}/u5cfg
 
 ${CFG_LIB}:
 	mkdir -p ${CFG_LIB}
 
 # object files
-${CFG_LIB}/u2cfg.o: u2cfg.c u2cfg.h cfg.h ${COMMON}/gendefs.h ${COMMON}/File.h ${COMMON}/option.h | ${CFG_LIB}
+${CFG_LIB}/u2cfg.o: u2cfg.c u2cfg.h ${HEADERS} | ${CFG_LIB}
 	$(call compile, ${CFG_LIB}/u2cfg.o, u2cfg.c)
 
 ${CFG_LIB}/u3cfg.o: u3cfg.c u3cfg.h cfg.h ${COMMON}/gendefs.h ${COMMON}/File.h ${COMMON}/option.h | ${CFG_LIB}
@@ -20,8 +27,8 @@ ${CFG_LIB}/status.o: status.c cfg.h ${COMMON}/gendefs.h ${COMMON}/File.h | ${CFG
 	$(call compile, ${CFG_LIB}/status.o, status.c)
 
 # binary files
-${U2BIN}/u2cfg: ${CFG_LIB}/u2cfg.o ${CFG_LIB}/status.o ${COMMON_LIB}/File.o ${COMMON_LIB}/option.o | ${U2BIN}
-	$(call link, ${U2BIN}/u2cfg, ${CFG_LIB}/u2cfg.o ${CFG_LIB}/status.o ${COMMON_LIB}/File.o ${COMMON_LIB}/option.o)
+${U2BIN}/u2cfg: ${CFG_LIB}/u2cfg.o ${CFG_LIB}/status.o ${LIBS} | ${U2BIN}
+	$(call link, ${U2BIN}/u2cfg, ${CFG_LIB}/u2cfg.o ${CFG_LIB}/status.o ${LIBS})
 
 ${U3BIN}/u3cfg: ${CFG_LIB}/u3cfg.o ${CFG_LIB}/status.o ${COMMON_LIB}/File.o ${COMMON_LIB}/option.o | ${U3BIN}
 	$(call link, ${U3BIN}/u3cfg, ${CFG_LIB}/u3cfg.o ${CFG_LIB}/status.o ${COMMON_LIB}/File.o ${COMMON_LIB}/option.o)
