--- a/data/u2up.ini
+++ b/data/u2up.ini
@@ -26,3 +26,8 @@ readme=README.txt
 ; config programs to invoke
 config.win=u2cfgw.exe
 config.dos=u2cfg.exe
+
+; tileset files
+cgatiles=Standard CGA Tileset
+egatiles=EGA Tileset (v2.0)
+egatiles.0=EGA Tileset (Classic)
