load tileset id into launcher/driver

--- a/data/u2up.ini
+++ b/data/u2up.ini
@@ -31,3 +31,7 @@ config.dos=u2cfg.exe
 cgatiles=Standard CGA Tileset
 egatiles=EGA Tileset (v2.0)
 egatiles.0=EGA Tileset (Classic)
+
+tiles.cga=
+tiles.ega=
+tiles0.ega=
