--- a/data/u2up.ini
+++ b/data/u2up.ini
@@ -29,9 +29,5 @@ config.dos=u2cfg.exe
 
 ; tileset files
 cgatiles=Standard CGA Tileset
-egatiles=EGA Tileset (v2.0)
-egatiles.0=EGA Tileset (Classic)
-
-tiles.cga=
-tiles.ega=
-tiles0.ega=
+egatiles=Standard EGA Tileset (v2.0)
+egatiles.0=Classic EGA Tileset (v1.0)
