add alternate EGA tileset

--- a/data/u2up.ini
+++ b/data/u2up.ini
@@ -31,3 +31,4 @@ config.dos=u2cfg.exe
 cgatiles=Standard CGA Tileset
 egatiles=Standard EGA Tileset (v2.0)
 egatiles.0=Classic EGA Tileset (v1.0)
+egatiles.u=Alternate EGA Tileset (Wiltshire Dragon)
