update config tool to handle theme directories

--- a/data/u2up.ini
+++ b/data/u2up.ini
@@ -28,7 +28,7 @@ config.win=u2cfgw.exe
 config.dos=u2cfg.exe
 
 ; tileset files
-cgatiles=Standard CGA Tileset
-egatiles=Standard EGA Tileset (v2.0)
-egatiles.0=Classic EGA Tileset (v1.0)
-egatiles.u=Alternate EGA Tileset (Wiltshire Dragon)
+cgatheme=Standard CGA Tileset
+egatheme=Standard EGA Tileset (v2.0)
+egatheme.cla=Classic EGA Tileset (v1.0)
+egatheme.alt=Alternate EGA Tileset (Wiltshire Dragon)
