--- a/Makefile.include
+++ b/Makefile.include
@@ -107,6 +107,7 @@ U2U16=${ROOT}/game/u2orig.u16
 U2UC=${ROOT}/game/u2orig.uc
 U2MAP=${ROOT}/game/u2orig.map
 U2GOG=${ROOT}/game/u2orig.gog
+U2UP_V11=${ROOT}/game/u2orig.v11
 
 # game locations (for installation & patching)
 U2ORIGINAL=${U2MAP}
