--- a/data/u2up.ini
+++ b/data/u2up.ini
@@ -19,6 +19,7 @@ u2-gog.pat=GOG.com (2007)
 u2up-11.pat=Ultima 2 Upgrade v1.1
 u2up-12.pat=Ultima 2 Upgrade v1.2
 u2up-20.pat=Ultima 2 Upgrade v2.0
+u2up-21.pat=Ultima 2 Upgrade v2.1
 
 ; readme file to show after upgrade
 readme=README.txt
