--- a/data/u2up.ini
+++ b/data/u2up.ini
@@ -33,3 +33,4 @@ cgatheme=Standard CGA Tileset
 egatheme=Standard EGA Tileset (v2.0)
 egatheme.10=Classic EGA Tileset (v1.0)
 egatheme.alt=Alternate EGA Tileset (Wiltshire Dragon)
+egatheme.c64=Commodore 64 Tileset
