--- a/Makefile.include
+++ b/Makefile.include
@@ -103,6 +103,7 @@ DATA=${ROOT}/data
 DOC=${ROOT}/doc
 
 # U2 game locations
+U2T123=${ROOT}/game/u2orig.123
 U2U16=${ROOT}/game/u2orig.u16
 U2UC=${ROOT}/game/u2orig.uc
 U2MAP=${ROOT}/game/u2orig.map
