update readme and add to ini

--- a/data/u3up.ini
+++ b/data/u3up.ini
@@ -25,3 +25,10 @@ u3up-31.pat=Ultima 3 Upgrade v3.1
 u3up-32.pat=Ultima 3 Upgrade v3.2
 u3up-33.pat=Ultima 3 Upgrade v3.3
 u3up-34.pat=Ultima 3 Upgrade v3.4
+
+; readme file to show after upgrade
+readme=README.txt
+
+; config programs to invoke
+config.win=u3cfgw.exe
+config.dos=u3cfg.exe
