rewrite rollback patching (and use Lists)

--- a/data/u3up.ini
+++ b/data/u3up.ini
@@ -3,20 +3,23 @@ base=u3-u16.pat
 
 ; release patches are incremental
 ; this is the order in which they should be applied
-releases=u3-r2.pat,u3-r3.pat,u3-t123.pat,u3-u16.pat
+releases=u3-r2.pat,u3-r3.pat,u3-t123.pat,u3-t123x.pat,u3-u16.pat
 
-; rollback cracked versions before upgrading
-rollback=u3-r1x.pat,u3-r2x.pat,u3-r3x.pat,u3-t123x.pat
+; floppy copy protection cracks that need rollback
+rollback.none=u3-r1x.pat
+rollback.u3-r2.pat=u3-r2x.pat
+rollback.u3-r3.pat=u3-r3x.pat
+rollback.u3-t123.pat=u3-t123x.pat
 
 ; names for release patch levels
 none=Initial Release (1984)
-u3-r1x.pat=Initial Release [cracked] (1984)
+u3-r1x.pat=Initial Release (1984) [cracked]
 u3-r2.pat=Second Release (1985)
-u3-r2x.pat=Second Release [cracked] (1985)
+u3-r2x.pat=Second Release (1985) [cracked]
 u3-r3.pat=Third Release (1985)
-u3-r3x.pat=Third Release [cracked] (1985)
+u3-r3x.pat=Third Release (1985) [cracked]
 u3-t123.pat=Ultima I-II-III Trilogy (1987)
-u3-t123x.pat=Ultima I-II-III Trilogy [cracked] (1987)
+u3-t123x.pat=Ultima I-II-III Trilogy (1987) [cracked]
 u3-u16.pat=Ultima I-VI Series / Ultima Collection / GOG.com (1991)
 
 ; names for upgrade patches
